syntax = "proto3";

option go_package = "./proto";

service AssetPrice {
  // Get the price of a specific asset by ID
  rpc GetAssetPrice(GetAssetPriceRequest) returns (GetAssetPriceResponse);

  // Get the prices of an asset by ID and a date range
  rpc GetAssetPriceHistory(GetAssetPriceHistoryRequest) returns (GetAssetPriceHistoryResponse);
}

// Request message for getting the price of an asset
message GetAssetPriceRequest {
  string asset_id = 1;  // Identifier of the asset
  string trade_date = 2;     // Trade date in ISO 8601 format (e.g., "2023-01-01")
}

// Response message containing the price of the asset
message GetAssetPriceResponse {
  string asset_id = 1;   // Identifier of the asset
  double price = 2;      // Current price of the asset
  string currency = 3;   // Currency of the price (e.g., USD, EUR)
  string trade_date = 4;  // Trade date in ISO 8601 format (e.g., "2023-01-01")
}

// Request message for getting asset prices by date range
message GetAssetPriceHistoryRequest {
  string asset_id = 1;       // Identifier of the asset
  string start_date = 2;     // Start date in ISO 8601 format (e.g., "2023-01-01")
  string end_date = 3;       // End date in ISO 8601 format (e.g., "2023-12-31")
}

// Response message containing a list of asset prices within the date range
message GetAssetPriceHistoryResponse {
  string asset_id = 1;             // Identifier of the asset
  repeated AssetPriceEntry prices = 2; // List of asset prices in the date range
}

// Represents a price entry with the timestamp
message AssetPriceEntry {
  string date = 1;      // Date of the price (in ISO 8601 format)
  double price = 2;     // Price of the asset on the specified date
  string currency = 3;  // Currency of the price (e.g., USD, EUR)
}
